<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuidline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.038"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuidline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.961"/>

    <TextView
        android:id="@+id/bm_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/karla"
        android:text="@string/bm_userHello"
        android:textColor="@color/bm_MuqLurji"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/startGuidline1"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/bm_Greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla"
        android:textColor="@color/bm_MuqLurji"
        android:textSize="13sp"
        android:text="@string/bm_greeting"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/bm_UserName"
        app:layout_constraintStart_toStartOf="@+id/startGuidline1"
        />
      <ImageView
          android:id="@+id/bm_moneyIc"
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:layout_marginStart="7dp"
          android:layout_marginTop="75dp"
          android:background="@drawable/ic_money_svgrepo_com"
          app:layout_constraintStart_toEndOf="@+id/bm_Greetings"
          app:layout_constraintTop_toTopOf="parent"
          android:contentDescription="@string/Money_On" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/bm_Avatar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="44.42dp"
        android:background="@drawable/profile_shape"
        app:layout_constraintWidth_percent="0.101"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/endGuidline1"
        app:layout_constraintTop_toTopOf="parent"
         />
    <View
        android:id="@+id/bm_BackText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/money_back_shape"
        app:layout_constraintHeight_percent="0.211"
        app:layout_constraintTop_toBottomOf="@id/bm_Greetings"
        app:layout_constraintStart_toStartOf="@+id/startGuidline1"
        app:layout_constraintEnd_toStartOf="@id/endGuidline1"
         />
    <TextView
        android:id="@+id/bm_Saving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla"
        android:textSize="15sp"
        android:text="@string/total_savings"
        android:textColor="@color/back_front"
        android:layout_marginTop="20dp"
        android:layout_marginStart="143dp"
        app:layout_constraintTop_toTopOf="@id/bm_BackText"
        app:layout_constraintStart_toStartOf="@id/bm_BackText"
        />
<TextView
    android:id="@+id/bm_Money"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Money_On"
    android:fontFamily="@font/karla"
    android:textSize="37sp"
    android:textColor="@color/MoneyOnColor"
    android:layout_marginTop="20dp"
    android:layout_marginStart="96dp"
    app:layout_constraintTop_toBottomOf="@id/bm_Saving"
    app:layout_constraintStart_toStartOf="@id/bm_BackText"

    />
    <View
        android:id="@+id/bm_BackAddMoney"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/addmoney_shape"
        app:layout_constraintDimensionRatio="3"
        app:layout_constraintWidth_percent="0.434"
        app:layout_constraintTop_toBottomOf="@id/bm_BackText"
        app:layout_constraintStart_toStartOf="@+id/startGuidline1"
        />
    <View
        android:id="@+id/bm_AddMoney_Ic"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_group_110"
        app:layout_constraintTop_toTopOf="@id/bm_BackAddMoney"
        app:layout_constraintStart_toStartOf="@+id/bm_BackAddMoney"/>
    <TextView
        android:id="@+id/bm_AddMoney"
        android:text="@string/add_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla"
        android:textSize="17sp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/bm_BackAddMoney"
        app:layout_constraintStart_toEndOf="@+id/bm_AddMoney_Ic"/>

    <View
        android:id="@+id/bm_Withdrow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/wishdrow_shape"
        app:layout_constraintDimensionRatio="3"
        app:layout_constraintWidth_percent="0.434"
        android:layout_marginStart="22dp"
        app:layout_constraintTop_toBottomOf="@id/bm_BackText"
        app:layout_constraintStart_toEndOf="@+id/bm_BackAddMoney"
        />
    <View
        android:id="@+id/bm_Withdrow_Ic"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_money__2__1"
        app:layout_constraintTop_toTopOf="@id/bm_Withdrow"
        app:layout_constraintStart_toStartOf="@+id/bm_Withdrow"/>
    <TextView
        android:id="@+id/bm_WthdrowText"
        android:text="@string/Withdrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla"
        android:textSize="17sp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/bm_Withdrow"
        app:layout_constraintStart_toEndOf="@+id/bm_Withdrow_Ic"/>
    <TextView
        android:id="@+id/bm_GetMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GetMoneyText"
        android:textSize="17sp"
        android:textStyle="bold"
        android:fontFamily="@font/karla"
        android:textColor="@color/bm_MuqLurji"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/startGuidline1"
        app:layout_constraintTop_toBottomOf="@+id/bm_BackAddMoney"/>
    <View
        android:id="@+id/bm_EmSave"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bm_in_line_shape"
        android:layout_marginTop="20dp"
        app:layout_constraintHeight_percent="0.077"
        app:layout_constraintTop_toBottomOf="@id/bm_GetMoney"
        app:layout_constraintStart_toStartOf="@id/startGuidline1"
        app:layout_constraintEnd_toStartOf="@id/endGuidline1"
        />
    <View
        android:id="@+id/bm_EmSave_Ic"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="21dp"
        android:background="@drawable/ic_group_111"
        app:layout_constraintTop_toTopOf="@id/bm_EmSave"
        app:layout_constraintStart_toStartOf="@+id/bm_EmSave"/>
    <TextView
        android:id="@+id/bm_emSaveT"
        android:text="@string/save_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bm_MuqLurji"
        android:textSize="15sp"
        android:layout_marginTop="22dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/bm_EmSave"
        app:layout_constraintStart_toEndOf="@id/bm_EmSave_Ic"/>
    <View
        android:id="@+id/bm_EmSave_Icc"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="85dp"
        android:background="@drawable/ic_chevron_right"
        app:layout_constraintTop_toTopOf="@id/bm_EmSave"
        app:layout_constraintStart_toEndOf="@+id/bm_emSaveT"/>
    <View
        android:id="@+id/bm_EmSave1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bm_in_line_shape"
        android:layout_marginTop="20dp"
        app:layout_constraintHeight_percent="0.077"
        app:layout_constraintTop_toBottomOf="@id/bm_EmSave"
        app:layout_constraintStart_toStartOf="@id/startGuidline1"
        app:layout_constraintEnd_toStartOf="@id/endGuidline1"
        />
    <View
        android:id="@+id/bm_EmSave_Ic1"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="21dp"
        android:background="@drawable/ic_group_10"
        app:layout_constraintTop_toTopOf="@id/bm_EmSave1"
        app:layout_constraintStart_toStartOf="@+id/bm_EmSave1"/>
    <TextView
        android:id="@+id/bm_emSaveT1"
        android:text="@string/invest_your_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bm_MuqLurji"
        android:textSize="15sp"
        android:layout_marginTop="22dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/bm_EmSave1"
        app:layout_constraintStart_toEndOf="@id/bm_EmSave_Ic1"/>
    <View
        android:id="@+id/bm_EmSave_Icc1"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="113dp"
        android:background="@drawable/ic_chevron_right"
        app:layout_constraintTop_toTopOf="@id/bm_EmSave1"
        app:layout_constraintStart_toEndOf="@+id/bm_emSaveT1"/>
    <TextView
        android:id="@+id/bm_MoneyWeys"
        android:text="@string/ways_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="17sp"
        android:fontFamily="@font/karla"
        android:textColor="@color/bm_MuqLurji"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="@id/startGuidline1"
        app:layout_constraintTop_toBottomOf="@+id/bm_EmSave1"
        />
    <View
        android:id="@+id/bm_EmSave2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bm_in_line_shape"
        android:layout_marginTop="20dp"
        app:layout_constraintHeight_percent="0.077"
        app:layout_constraintTop_toBottomOf="@id/bm_MoneyWeys"
        app:layout_constraintStart_toStartOf="@id/startGuidline1"
        app:layout_constraintEnd_toStartOf="@id/endGuidline1"
        />
    <View
        android:id="@+id/bm_EmSave_Ic2"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/ic_group_103"
        app:layout_constraintTop_toTopOf="@id/bm_EmSave2"
        app:layout_constraintStart_toStartOf="@+id/bm_EmSave2"/>
    <TextView
        android:id="@+id/bm_emSaveT2"
        android:text="@string/invite_friends"
        android:layout_width="170dp"
        android:layout_height="36dp"
        android:textColor="@color/bm_MuqLurji"
        android:textSize="15sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="@id/bm_EmSave2"
        app:layout_constraintStart_toEndOf="@id/bm_EmSave_Ic2"/>
    <View
        android:id="@+id/bm_EmSave_Icc2"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="66dp"
        android:background="@drawable/ic_chevron_right"
        app:layout_constraintTop_toTopOf="@id/bm_EmSave2"
        app:layout_constraintStart_toEndOf="@+id/bm_emSaveT2"/>



</androidx.constraintlayout.widget.ConstraintLayout>